# fine

./: CMakeLists.txt
gperf/: date_formats.gperf  division_types.gperf  month_abbr.gperf  tcat.gperf  ttype.gperf  ttype_nationwide.gperf  ttype_natwest.gperf
include/: balance.h  banks.h  categorisation.h  common.h  csv.h  date.h  gperf.h  table.h  tt_nationwide.h
scripts/: build.sh  gperf.sh  lidl.py  sainsburys.user.js
src/: balance.c  banks.c  categorisation.c  common.c  csv.c  date.c  gperf.c  main.c  table.c  tt_nationwide.c
